--- a/doom candy/doom candy.csproj
+++ b/doom candy/doom candy.csproj
@@ -84,7 +84,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\harley\NewBehaviourScript.cs" />
+    <Compile Include="Assets\harley\controller.cs" />
+    <Compile Include="Assets\harley\player_movment.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
