--- a/doom candy/doom candy.csproj
+++ b/doom candy/doom candy.csproj
@@ -76,14 +76,23 @@
     <Reference Include="UnityEditor.iOS.Extensions.Common">
       <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Common.dll</HintPath>
     </Reference>
+    <Reference Include="XInputDotNetPure">
+      <HintPath>Assets\XInputDotNet\Plugins\XInputDotNetPure.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Caleb\enemy.cs" />
     <Compile Include="Assets\Caleb\GameAudio.cs" />
     <Compile Include="Assets\Caleb\MenuScript.cs" />
+    <Compile Include="Assets\harley\camracontrol.cs" />
     <Compile Include="Assets\harley\controller.cs" />
     <Compile Include="Assets\harley\Inerface.cs" />
     <Compile Include="Assets\harley\player_movment.cs" />
+    <Compile Include="Assets\XInputDotNet\Examples\XInputTestCS.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\XInputDotNet\Docs.txt" />
+    <None Include="Assets\XInputDotNet\MITLicense.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
