--- a/doom candy/doom candy.csproj
+++ b/doom candy/doom candy.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Assets\harley\shooting ai.cs" />
     <Compile Include="Assets\harley\shooting_ai.cs" />
     <Compile Include="Assets\harley\spawnroom.cs" />
+    <Compile Include="Assets\harley\up.cs" />
     <Compile Include="Assets\XInputDotNet\Examples\XInputTestCS.cs" />
   </ItemGroup>
   <ItemGroup>
