--- a/doom candy/doom candy.csproj
+++ b/doom candy/doom candy.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Assets\harley\player_movment.cs" />
     <Compile Include="Assets\harley\respawn.cs" />
     <Compile Include="Assets\harley\ROTATE.cs" />
+    <Compile Include="Assets\harley\shoot_swich.cs" />
     <Compile Include="Assets\harley\shooting ai.cs" />
     <Compile Include="Assets\harley\shooting_ai.cs" />
     <Compile Include="Assets\harley\spawnroom.cs" />
